<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/quiz_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:gravity="start|center_vertical"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/white" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/question_id_tv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="bottom|center"
                android:paddingBottom="8dp"
                android:text="@string/question_id_text" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <include layout="@layout/time_view" />
            </RelativeLayout>

            <TextView
                android:id="@+id/question_tv"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:text="@string/question_text"
                android:textColor="#000000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/option_one_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:paddingEnd="24dp"
                    android:paddingStart="24dp"
                    android:text="@string/option_one"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/option_two_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:paddingEnd="24dp"
                    android:paddingStart="24dp"
                    android:text="@string/option_two"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/option_three_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:paddingEnd="24dp"
                    android:paddingStart="24dp"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:text="Hey Guys this is an Answer" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>