<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context="com.example.android.photography.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/image_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingTop="24dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/indicator_iv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:padding="1dp"
                    app:civ_border_width="4dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_holder"
                android:gravity="center"
                android:paddingTop="16dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                tools:text="@string/you_passed" />


            <TextView
                android:id="@+id/status_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/status"
                android:gravity="top|center"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                tools:text="@string/passed_text" />

            <RelativeLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/status_comment">

                <Button
                    android:id="@+id/continue_button"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/next_question"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/time_out_options"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <Button
                        android:id="@+id/quit_test_button"
                        style="?android:borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignEnd="@+id/textView"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/quit_assessment"
                        android:textAllCaps="true"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/quit_test_button"
                        android:paddingBottom="8dp"
                        android:paddingEnd="24dp"
                        android:paddingStart="24dp"
                        android:text="@string/choose_no"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <Button
                        android:id="@+id/next_question"
                        style="?android:borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignBottom="@id/quit_test_button"
                        android:layout_alignParentEnd="true"
                        android:layout_alignTop="@id/quit_test_button"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/next_question"
                        android:textAllCaps="true"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/next_question"
                        android:layout_alignParentEnd="true"
                        android:paddingBottom="8dp"
                        android:paddingEnd="36dp"
                        android:paddingStart="36dp"
                        android:text="@string/choose_yes"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>